--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GlorySeason</title>
-    <link rel="stylesheet" href="../praktika/style10.css">
+    <link rel="stylesheet" href="../praktika/style.css">
 </head>
 <body>
     <header>
@@ -286,4 +286,5 @@
           </footer>
     
 </body>
+
 </html>
