--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlorySeason</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Sweetly Sculpted</title>
+    <link rel="stylesheet" href="../praktika/style.css">
 </head>
 <body>
     <header>
@@ -288,4 +288,5 @@
 </body>
 
 </html>
+
 
