--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweetly Sculpted</title>
-    <link rel="stylesheet" href="../praktika/style.css">
+    <link rel="stylesheet" href="//Tortiki.github.io/style.css">
 </head>
 <body>
     <header>
@@ -288,5 +288,6 @@
 </body>
 
 </html>
+
 
 
